solved heros page

--- a/content/article/2/2.md
+++ b/content/article/2/2.md
@@ -16,15 +16,15 @@
 
 您是否知道许多国内⾃⾏招⽣的海外模拟联合国并不遵循联合国⼯作使⽤的实际规则和做法？
 
-|                    | **我们** | **其他** |
-|--------------------| --- | --- |
-| **合规**             | 遵循联合国⼯作使⽤的实际规则和做法| 不遵循联合国⼯作使⽤的实际规则和做法 |
-| **标准化**            | 严格遵守联合国官⽅《模拟联合国指南》，举⾏标准会议活动 | 以模拟联合国名义安排国际组织参访和教学，⽆标准的模拟联合国⼤会活动。 |
-| **身份认证**           | 联合国机构共同主办 | 非联合国机构共同主办 |
-| **内容**             | 真实出席活动现场 | 活动+旅游+非联合国官方组织的培训课程 |
-|                    | 真正的⼤会通过的⼤多数决定都是以协商⼀致的⽅式做出的。 | 形式上投票 |
-| **场地**             | 联合国组织的相关标准场地，并有来⾃⾄少⼆⼗个不同国家的百余位模拟代表共同参与 | 在联合国楼下或者周边参观访问 |
-| **含金量**            | 联合国组织认可 | 联合国组织不认可 |
+| <br /> | **我们** | **其他** |
+| --- | --- | --- |
+| **合规** | 遵循联合国⼯作使⽤的实际规则和做法<br /> | 不遵循联合国⼯作使⽤的实际规则和做法<br /> |
+| **标准化** | 严格遵守联合国官⽅《模拟联合国指南》，举⾏标准会议活动 | 以模拟联合国名义安排国际组织参访和教学，⽆标准的模拟联合国⼤会活动。 |
+| **身份认证** | 联合国机构共同主办 | 非联合国机构共同主办 |
+| **内容** | 真实出席活动现场 | 活动+旅游+非联合国官方组织的培训课程 |
+|  | 真正的⼤会通过的⼤多数决定都是以协商⼀致的⽅式做出的。 | 形式上投票 |
+| **场地** | 联合国组织的相关标准场地，并有来⾃⾄少⼆⼗个不同国家的百余位模拟代表共同参与 | 在联合国楼下或者周边参观访问 |
+| **含金量** | 联合国组织认可 | 联合国组织不认可 |
 
 
 
@@ -34,82 +34,45 @@
 
 #### 德国（杜森尔多夫）项⽬介绍：
 ####
-本次项⽬由主办⽅为您安排以下⾏程，报名后您将获得指导⼿册、 ⽴场⽂件撰写办法、会议现场技巧等必要⽂件并与我们的专家沟通 流程细节，德意志联邦共和国总统或部委官员将出席本届活动，我们会提醒您注意着装和拍摄细节：
-
-**报名时间线：**
-8⽉15⽇截⽌录⼊报名，团体报名截⽌⾄9⽉20⽇。
-**活动时间及地点：**
-2023年11⽉19-25⽇，杜森尔多夫，德国
+本次项⽬由主办⽅为您安排以下⾏程，报名后您将获得指导⼿册、 ⽴场⽂件撰写办法、会议现场技巧等必要⽂件并与我们的专家沟通 流程细节，德意志联邦共和国总统或部委官员将出席本届活动，我们会提醒您注意着装和拍摄细节：<br /> <br />**报名时间线：**<br />8⽉15⽇截⽌录⼊报名，团体报名截⽌⾄9⽉20⽇。<br />**活动时间及地点：**<br />2023年11⽉19-25⽇，杜森尔多夫，德国
 
 **行程安排**
 
-**第⼀天：**
-4:00PM-6:00PM到达下榻酒店，办理⼿续，
-6:00PM-7:00PM 在市政厅前汇合，参观活动。
+**第⼀天：**<br />4:00PM-6:00PM到达下榻酒店，办理⼿续，<br />6:00PM-7:00PM 在市政厅前汇合，参观活动。
 
-**第⼆天：**
-8:00AM-6:00PM市内⽂化之旅，
-7:30PM-10:00PM参加委员招待会和传统的餐饮会。
+**第⼆天：**<br />8:00AM-6:00PM市内⽂化之旅，<br />7:30PM-10:00PM参加委员招待会和传统的餐饮会。<br /> <br />**第三天：**<br />9:00AM-11:00AM在市政厅⼆楼联合国教科⽂遗产委员会现场参加⼤会全体会议(GA),<br />1:00PM-1:30PM会议后问答环节,<br />1:30PM-3:00PM午餐休息，<br />3:00PM-7:00PM委员论坛。
 
-**第三天：**
-9:00AM-11:00AM在市政厅⼆楼联合国教科⽂遗产委员会现场参加⼤会全体会议(GA),
-1:00PM-1:30PM会议后问答环节,
-1:30PM-3:00PM午餐休息，
-3:00PM-7:00PM委员论坛。
+**第四天：**<br />9:00AM-1:00PM早上参加位于市政厅⼆楼联合国⼈权事务⾼级专员办事处的⼈权⼤会(HRC)，<br />1:00PM-2:30PM,午餐休息，<br />2:45PM-6:30PM下午参加安全理事会(SC)，<br />7:30PM-9:30PM晚上参加感恩节晚宴。
 
-**第四天：**
-9:00AM-1:00PM早上参加位于市政厅⼆楼联合国⼈权事务⾼级专员办事处的⼈权⼤会(HRC)，
-1:00PM-2:30PM,午餐休息，
-2:45PM-6:30PM下午参加安全理事会(SC)，
-7:30PM-9:30PM晚上参加感恩节晚宴。
+**第五天：**<br />9:00AM-1:00PM在州议会⼤厅参加德国联合国环境署环境⼤会（UNEA）。1:00PM-2:30PM午餐休息，<br />2:30-5:30第⼆次全体会议,<br />6:00PM-7:00PM闭幕⼤会，<br />9:30PM-2:30AM舞会（可⾃由参加）
 
-**第五天：**
-9:00AM-1:00PM在州议会⼤厅参加德国联合国环境署环境⼤会（UNEA）。1:00PM-2:30PM午餐休息，
-2:30-5:30第⼆次全体会议,
-6:00PM-7:00PM闭幕⼤会，
-9:30PM-2:30AM舞会（可⾃由参加）
-
-**下榻酒店：**
-德国多林特现代连锁酒店（四星）
+**下榻酒店：**<br />德国多林特现代连锁酒店（四星）
 
 
 **意⼤利项目介绍：**
 
-| Wrestler                | Origin       | Finisher           |
-| ----------------------- | ------------ | ------------------ |
-| Bret "The Hitman" Hart  | Calgary, AB  | Sharpshooter       |
-| Stone Cold Steve Austin | Austin, TX   | Stone Cold Stunner |
-| Randy Savage            | Sarasota, FL | Elbow Drop         |
-| Vader                   | Boulder, CO  | Vader Bomb         |
-| Razor Ramon             | Chuluota, FL | Razor's Edge       |
+|               | **课时**            | **内容** |
+|---------------|-------------------| - |
+| **模式一：线上+线下** | 线上：80课时           | 具体看项目安排 |
+|           **线下** | 线下：罗⻢/佛罗伦萨/⽶兰实地举办 | * 1.包含两场场模拟联合国实践⼤会，您需要在以上任选其⼀地点，多选者需要与主办⽅进⾏沟通是否有多余席位 *2.活动时间：2024年2⽉20-22⽇ （罗⻢）|
+| **模式二：纯线上**   | 线上：80课时           | 具体看项目安排 |
+| | 线上：在线模拟           | 为期两个⽉每周⼀次（共⼋ 次）的与专家进⾏的⽹络会⾯包含以下内容。 |
 
 
-|                      | **课时** | **内容** | **收获** |
-|----------------------| - | - | - |
-| **模式一：线上+线下**        | 线上：80课时 | 具体看项目安排 |*两种内容均可获得官⽅证书。|
-
-费⽤明细：代表费、模拟联合国专家费、会议期间膳⻝、酒店、参观、项⽬内的交通
-
-不包含：机票、个⼈消费、签证费、等⾮项⽬内的第三⽅收费。
-
-项⽬地域⽀持：联合国KIP国际学院
-|
-| **线下** | 线下：罗⻢/佛罗伦萨/⽶兰实地举办 | 1.包含两场场模拟联合国实践⼤会，您需要在以上任选其⼀地点，多选者需要与主办⽅进⾏沟通是否有多余席位
-2.活动时间：2024年2⽉20-22⽇ （罗⻢）
-|  |
-| **模式二：纯线上** | 线上：80课时 | 具体看项目安排 |  |
-|
-| 线上：在线模拟 | 为期两个⽉每周⼀次（共⼋
-次）的与专家进⾏的⽹络会⾯包含以下内容。 |  |
-
+> 两种内容均可获得官⽅证书。
+>
+> 费⽤明细：代表费、模拟联合国专家费、会议期间膳⻝、酒店、参观、项⽬内的交通
+>
+> 不包含：机票、个⼈消费、签证费、等⾮项⽬内的第三⽅收费。
+>
+> 项⽬地域⽀持：联合国KIP国际学院
 
 
 **瑞⼠（⽇内瓦）：**
 
 详情敬请期待……
 
-**项⽬时间：**2023年8⽉21⽇-25⽇
-**项⽬地域⽀持：**联合国裁军研究所、联合国经济及社会理事会
+**项⽬时间：** 2023年8⽉21⽇-25⽇<br />**项⽬地域⽀持：** 联合国裁军研究所、联合国经济及社会理事会
 
 **法国（巴黎）：**
 
@@ -118,26 +81,18 @@
 
 **您将获得以下收获：**
 
-**公共演讲**
-旨在能足够再工作组或观众面前用意大利语和英语发表正式和非正式演讲
+**公共演讲**<br />旨在能足够再工作组或观众面前用意大利语和英语发表正式和非正式演讲
 
-**谈判**
-旨在通过对抗达成目标的能力，并寻求各方之间的共识
+**谈判**<br />旨在通过对抗达成目标的能力，并寻求各方之间的共识
 
-**团队合作**
-旨在成为在工作团队钟找到自己角色的能力，重视集体生产力而不是个人生产力
+**团队合作**<br />旨在成为在工作团队钟找到自己角色的能力，重视集体生产力而不是个人生产力
 
-**研究方法**
-旨在理解并进行研究和分析的能力，这是学术和工作领域的消耗性技能
+**研究方法**<br />旨在理解并进行研究和分析的能力，这是学术和工作领域的消耗性技能
 
-**时间管理**
-旨在将时间管理视为机会而不是障碍
+**时间管理**<br />旨在将时间管理视为机会而不是障碍
 
-**领导**
-意味着有能力领导一个团队，并在不同的环境中成为榜样和推动力
+**领导**<br />意味着有能力领导一个团队，并在不同的环境中成为榜样和推动力
 
-**解决问题**
-旨在识别、分析和克服困难以实现目标的能力
+**解决问题**<br />旨在识别、分析和克服困难以实现目标的能力
 
-**写作技能**
-旨在提供撰写论文、论文和官方文件等文本的能力，这些是学术和工作领域的消耗性技能。
+**写作技能**<br />旨在提供撰写论文、论文和官方文件等文本的能力，这些是学术和工作领域的消耗性技能。
