feat: modify font

--- a/content/article/1/1.md
+++ b/content/article/1/1.md
@@ -24,8 +24,8 @@ date: 2021-12-24
 
 为实现此宗旨，联合国教科文组织设置了五大职能：
 
-1）前瞻性研究：明天的世界需要什么样的教育、科学 、文化和传播。
-2）知识的发展 、传播与交流：主要依靠研究 、培训和教学 。
-3）制订准则：起草和通过国际文件和法律建议。
-4）知识和技术：以“ 技术合作”的形式提供给会员国制订发展政策和发展计划。
-5）专门化信息的交流。
+1. 前瞻性研究：明天的世界需要什么样的教育、科学、文化和传播。
+2. 知识的发展、传播与交流：主要依靠研究、培训和教学。
+3. 制订准则：起草和通过国际文件和法律建议。
+4. 知识和技术：以“技术合作”的形式提供给会员国制订发展政策和发展计划。
+5. 专门化信息的交流。
