--- a/content/article/2/2.md
+++ b/content/article/2/2.md
@@ -1,6 +1,6 @@
-### 模拟联合国
-参考链接：[https://www.unesco.org/zh/articles/shijieyichanweiyuanhuijijiangshenyinilierushijieyichan?hub=701](https://www.unesco.org/zh/articles/shijieyichanweiyuanhuijijiangshenyinilierushijieyichan?hub=701)
-#### 2023欧洲六国模拟联合国项⽬
+### 2023欧洲六国模拟联合国项⽬
+
+[//]: # (参考链接：[https://www.unesco.org/zh/articles/shijieyichanweiyuanhuijijiangshenyinilierushijieyichan?hub=701]&#40;https://www.unesco.org/zh/articles/shijieyichanweiyuanhuijijiangshenyinilierushijieyichan?hub=701&#41;)
 
 是联合国KIP国际学院与意⼤利联合国教科⽂组织⻘教中⼼授权的独家模拟联合国项⽬。本项⽬分为、德国、瑞⼠、意⼤利、奥地利、⼟⽿其、⻄班⽛六国（任选其⼀），项⽬参与者将在上述国家联合国相关组织机构官⽅所在地全程参与联合国环境⼤会、安全理事会、⼈权理事会等官⽅模拟项⽬（附有各国项⽬代表指南和联合国⼤会指南和官⽅指导视频），参会代表需要，抛开个⼈信念，捍卫所属国家的利益。他们本着相互尊重的外交的精神，以战略⽅式宣传对该国最有利的想法，以使其他国家相信其⽴场的相关性。参会者的精彩发⾔和⽴场⽂件将有机会获得联合国官⽅的项⽬奖。
 
@@ -33,7 +33,7 @@
 各国模拟联合国专家为本项⽬学员独家录制的指导视频并撰写指导⼿册，将协助您提交项⽬，参加⼤会宣⾔，⼿把⼿教您撰写提交成员国或观察员⽴场⽂件（position paper）、所代表国家的政策声明（policy statement），带您深度学习联合国⼤会知识。
 
 #### 德国（杜森尔多夫）项⽬介绍：
-####
+
 本次项⽬由主办⽅为您安排以下⾏程，报名后您将获得指导⼿册、 ⽴场⽂件撰写办法、会议现场技巧等必要⽂件并与我们的专家沟通 流程细节，德意志联邦共和国总统或部委官员将出席本届活动，我们会提醒您注意着装和拍摄细节：<br /> <br />**报名时间线：**<br />8⽉15⽇截⽌录⼊报名，团体报名截⽌⾄9⽉20⽇。<br />**活动时间及地点：**<br />2023年11⽉19-25⽇，杜森尔多夫，德国
 
 **行程安排**
@@ -49,7 +49,7 @@
 **下榻酒店：**<br />德国多林特现代连锁酒店（四星）
 
 
-**意⼤利项目介绍：**
+#### 意⼤利项目介绍
 
 |               | **课时**            | **内容** |
 |---------------|-------------------| - |
@@ -68,18 +68,18 @@
 > 项⽬地域⽀持：联合国KIP国际学院
 
 
-**瑞⼠（⽇内瓦）：**
+#### 瑞⼠（⽇内瓦）项目介绍
 
 详情敬请期待……
 
 **项⽬时间：** 2023年8⽉21⽇-25⽇<br />**项⽬地域⽀持：** 联合国裁军研究所、联合国经济及社会理事会
 
-**法国（巴黎）：**
+#### 法国（巴黎）项目介绍
 
 详情敬请期待……
 
 
-**您将获得以下收获：**
+#### 您将获得以下收获
 
 **公共演讲**<br />旨在能足够再工作组或观众面前用意大利语和英语发表正式和非正式演讲
 
