--- a/content/article/4/2.md
+++ b/content/article/4/2.md
@@ -1,6 +1,4 @@
-### 联合国地方经济发展局
-
-#### 联合国地方经济发展局（ILS LEDA）
+### 联合国地方经济发展局（ILS LEDA）
 
 于 1992 年在国际劳工组织、联合国开发计划署和联合国项目事务厅的合作下设立，提供与当地经济发展进程的治理、战略和实施相关的技术援助。特别是，它支持地方经济发展机构（LEDA）的创建、运作和联网。地方经济发展机构 LEDAs 是领土服务，由当地公共、私人和非营利组织协会管理，其使命是支持企业、增强当地资源和能力以及将弱势群体纳入经济活动。超过60 个 LEDA 在 18 个国家/地区运营，2011年并入联合国KIP国际学院。
 
